--------------------------------------------------------------------------------------------------
Release notes version 1.7.6_beta : Enhancements, modifications and corrected bugs since version 1.7.5 :
--------------------------------------------------------------------------------------------------
31/08/17 (TRUST)  New feature : Introduce no_verify option (Usage: trust MyJDD.data -no_verify)
21/08/17 (TRUST)  Validation  : Blocking turbulent quasi-compressible calculation with mass fraction in VEF
29/06/17 (TRUST)  Bug fixed   : Taking into account the name of the thermal power defined by Champ_Input_P0
--------------------------------------------------------------------------------------------------
Release notes version 1.7.5 : Enhancements, modifications and corrected bugs since version 1.7.4 :
--------------------------------------------------------------------------------------------------
29/05/17 (TRUST)  New feature : Extraction method possible on 1D mesh
16/05/17 (TRUST)  Minor change: Option -config completed with gedit editor
25/04/17 (Tools)  Minor change: Options -edit, -xedit and -xcheck added to the trust script (EDITEUR, EditData and VerifData)
25/04/17 (TRUST)  Major change: Adding a stop test for unique implicit time scheme in coupled problem with QC
30/03/17 (Tools)  New feature : New python script to convert into Ensight format (Lata_to_case.py)
27/03/17 (Tools)  Minor change: The default editor for "trust -evol datafile" is the EDITEUR variable (See ~/.perso_TRUST.env file)
17/03/17 (TRUST)  Bug fixed   : Correction of the output of the flux on the boundaries in Front-Tracking
21/02/17 (TRUST)  Minor change: Warning replaced by stop if definition_champs name is x, y, z or t
17/02/17 (TRUST)  New keyword : Add new method for Reduction_0D post field: normalized_norm_L2 [ =norme_L2(field)/norme_L2(1) ]
31/01/17 (TRUST)  Bug fixed   : modele_turbulence WALE with turbulence_paroi negligeable and Cw=0 is now ok