@@ -234,7 +234,7 @@ double EDO_Pression_th_VDF::masse_totale(double P,const DoubleTab& T)
       for (elem=0 ; elem<nb_elem ; elem++)
         {
           double v = volumes(elem);
-          double r = 8.314/Masse_mol_mel(elem);
+          double r = 8.3143/Masse_mol_mel(elem);
           M += v*loi_mel_GP.calculer_masse_volumique_case(P,T[elem],r,elem);
         }
     }
